Se sube reto tecnico de automatizacion con la funcionalidad de registro de empleado con un 70 por ciento automatizada

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -19,5 +19,6 @@ webdriver{
 }
 
 pages{
-    productStore = "https://www.demoblaze.com/"
+    productStore = "https://www.demoblaze.com/",
+    OrangeHRM = "https://opensource-demo.orangehrmlive.com/web/index.php/auth/login"
 }
